<resources>

    <string name="app_name">HomePLC Remote</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">HomePLC Remote</string>
    <string name="host_address">Host address</string>
    <string name="connect">Connect</string>
    <string name="homeplc">HomePLC</string>
    <string name="remote">Remote</string>
    <string name="outputs">Outputs</string>
    <string name="inputs">Inputs</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="copyright">© AppL-DSP Subotica</string>
    <string name="o1">Output 1</string>
    <string name="o2">Output 2</string>
    <string name="o3">Output 3</string>
    <string name="o4">Output 4</string>
    <string name="o5">Output 5</string>
    <string name="o6">Output 6</string>
	<string name="o7">Output 7</string>
	<string name="o8">Output 8</string>
	<string name="i1">Input 1</string>
    <string name="i2">Input 2</string>
    <string name="i3">Input 3</string>
    <string name="i4">Input 4</string>
    <string name="i5">Input 5</string>
    <string name="i6">Input 6</string>
</resources>